# bbs-signatures

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md  index.web-sample.js  index.web.js  jest.config.js  package.json  tester.js  tsconfig.json  webpack.config.js
.github/: pull_request_template.md
.github/workflows/: any-pr.yaml  codeql-analysis.yml  github_clone_assurance.yaml  push-master.yaml  push-release.yaml
bench/: helper.ts  index.ts
docs/: ALGORITHM.md  CONTRIBUTING.md  RELEASE.md
sample/browser/: index.web-sample.js  package.json  template.html  webpack.config.js
sample/ts-node/: README.md  package.json  tsconfig.json
sample/ts-node/src/: index.ts
scripts/: build-asm.sh  build-package.sh  build-webpack.sh  build.sh  install-binaryen.sh  install-build-deps.sh  install-dependencies.sh  pack-wasm-base64.js  publish-unstable.sh  publish.sh  remove-install-script.js  test-browser.sh  test-package.sh  test.sh
src/: bbs_plus.rs  bls12381.rs  lib.rs  macros.rs  utils.rs
src/js/: bls12381ToBbs.ts  crypto-polyfill.js  crypto_polyfill.js  exports.js  index.asm.js  index.d.ts  index.js  index.web.js  util.js  wasm_helper.js  wasm_module.js  wasm_promise.js
src/js/types/: BbsBlindSignContext.ts  BbsBlindSignContextRequest.ts  BbsBlindSignRequest.ts  BbsCreateProofRequest.ts  BbsKeyPair.ts  BbsSignRequest.ts  BbsVerifyBlindSignContextRequest.ts  BbsVerifyProofRequest.ts  BbsVerifyRequest.ts  BbsVerifyResult.ts  Bls12381ToBbsRequest.ts  BlsBbsSignRequest.ts  BlsBbsVerifyRequest.ts  BlsKeyPair.ts  index.ts
test/: asm.js  jest.spec.js  wasm.js
test/all/: bls12381.js  index.js
tests/: bbs_plus.rs  bls12381.rs  bls12381.spec.ts  bls12381ToBbs.spec.ts  web.rs
tests/asm/: asm.ts
tests/asm/all/: bls12381.ts  bls12381ToBbs.ts  index.ts  util.ts
tests/asm/all/bbsSignature/: createProof.ts  sign.ts  verify.ts  verifyProof.ts
tests/bbsSignature/: createProof.bbsSignature.asm.spec.ts  createProof.bbsSignature.spec.ts  sign.bbsSignature.spec.ts  verify.bbsSignature.spec.ts  verifyProof.bbsSignature.spec.ts
tests/utilities/: index.ts
