[package]
authors = ["Tobias Looker <tobias.looker@mattr.global>", "Mike Lodder <redmike7@gmail.com>"]
description = "WASM binding to bbs rust crate"
edition = "2018"
license = "Apache-2.0"
name = "wasm"
repository = "https://github.com/mattrglobal/wasm-bbs-signatures"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
console = ["console_error_panic_hook"]
default = []

[dependencies]
arrayref = "0.3"
bbs = { version = "0.4.1", default-features = false, features = ["wasm"], git = "https://github.com/mikelodder7/ursa", branch = "wasm" }
console_error_panic_hook = { version = "0.1.1", optional = true }
js-sys = "0.3"
rand = { version = "0.7", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.1.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.39", features = ['console'] }
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
lto = true
opt-level = "s"
