[package]
authors = ["Tobias Looker <tobias.looker@mattr.global>", "Mike Lodder <redmike7@gmail.com>"]
description = "WASM binding to bbs rust crate"
edition = "2018"
license = "Apache-2.0"
name = "wasm"
repository = "https://github.com/mattrglobal/bbs-signatures"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
console = ["console_error_panic_hook"]

[dependencies]
arrayref = "0.3"
bbs = { version = "0.4.1", default-features = false, features = ["wasm"] }
console_error_panic_hook = { version = "0.1.7", optional = true }
hkdf = "0.8"
js-sys = "0.3"
rand = { version = "0.7", features = ["wasm-bindgen"] }
pairing-plus = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
sha2 = "0.8"
wasm-bindgen = "= 0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ['console'] }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
lto = true
opt-level = "s"
